2012-01-02 Pierre Wieser <pwieser@trychlos.org>

	* Allmost all files: Bump copyright year.

	* ChangeLog-2011: New file.

	* src/core/na-exporter.c (exporter_get_formats): Fix variable declaration.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_str_add_prefix):
	Fix function deprecation.

2012-01-01 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/export-format-ask.png: Add omitted image.

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_str_add_prefix): Deprecated function.

	* src/core/na-import-mode.c:
	* src/core/na-import-mode.h (na_import_mode_get_id): New function.

	* src/core/na-importer-ask.c (on_destroy_toplevel): Fix handler signature.

	* src/core/na-importer.c (get_mode_from_struct): Fix GdkPixbuf reference count.

	* src/core/na-ioption.h:
	* src/core/na-ioptions-list.c: Fix typo.

	* src/core/na-importer-ask.c:
	* src/nact/nact-assistant-import.c: Implement NAIOptionsList interface.